--- a/app/src/main/res/layout/item_free_gift.xml
+++ b/app/src/main/res/layout/item_free_gift.xml
@@ -17,6 +17,7 @@
             android:layout_height="14dp"
             android:layout_alignParentRight="true"
             android:background="@drawable/bg_text_item_free_dialog"
+            android:gravity="center"
             android:textColor="#fefefe"
             android:textSize="9sp" />
     </LinearLayout>
@@ -30,6 +31,7 @@
         android:src="@drawable/ic_flower_free_gift" />
 
     <TextView
+        android:id="@+id/tv_state"
         android:layout_width="38dp"
         android:layout_height="15dp"
         android:layout_alignParentBottom="true"
