--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -433,28 +433,31 @@
 
                 </com.youth.banner.Banner>
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/vp_activity"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@id/banner"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginTop="5dp"
-                    android:overScrollMode="never"
-                    android:visibility="visible" />
-
                 <LinearLayout
-                    android:id="@+id/ll_pager_index"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_below="@id/vp_activity"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginRight="7dp"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
 
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/vp_activity"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:overScrollMode="never"
+                        android:visibility="visible" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_pager_index"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal" />
                 </LinearLayout>
 
                 <View
