--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -570,7 +570,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="50dp"
-        android:layout_marginRight="12dp">
+        android:layout_marginRight="12dp"
+        android:visibility="gone">
 
         <ImageButton
             android:id="@+id/btn_treasure_box"
