--- a/app/src/main/res/layout/dialog_personal_info.xml
+++ b/app/src/main/res/layout/dialog_personal_info.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/bg_civilian"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -45,8 +46,8 @@
 
             <ImageButton
                 android:id="@+id/btn_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_marginRight="7dp"
                 android:background="@null"
                 android:src="@drawable/ic_close_per"
@@ -98,15 +99,30 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_user_avatar" />
 
-            <TextView
-                android:id="@+id/tv_anchor_id"
+            <RelativeLayout
+                android:id="@+id/rl_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/font_color_11"
-                android:textSize="9sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_nick_name" />
+                app:layout_constraintTop_toBottomOf="@id/tv_nick_name" >
+
+                <TextView
+                    android:id="@+id/tv_anchor_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_color_11"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="9sp" />
+
+                <com.whzl.mengbi.ui.widget.view.PrettyNumText
+                    android:id="@+id/tv_pretty_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/tv_anchor_id"
+                    android:visibility="gone"/>
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/ll_level_container"
@@ -116,7 +132,7 @@
                 android:gravity="center_vertical"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_anchor_id" />
+                app:layout_constraintTop_toBottomOf="@id/rl_number" />
 
             <TextView
                 android:id="@+id/tv_introduce"
@@ -135,7 +151,6 @@
                 android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -151,6 +166,7 @@
                     android:visibility="gone"/>
 
                 <TextView
+                    android:id="@+id/tv_at"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -160,21 +176,29 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/tv_private_chat"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="私信"
                     android:textColor="@color/font_color_11"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
 
-                <ImageButton
+                <RelativeLayout
+                    android:id="@+id/rl_more"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:src="@drawable/ic_three_point" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_three_point" />
+                </RelativeLayout>
+
 
             </LinearLayout>
 
