--- a/app/src/main/res/layout/item_medal_wall.xml
+++ b/app/src/main/res/layout/item_medal_wall.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_medal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="60dp"
+        android:layout_height="45dp"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/tv_medal"
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/iv_medal"
         android:textSize="10sp"
-        android:textColor="@color/text_grey"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/text_grey" />
 
 </RelativeLayout>
