--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -338,4 +338,10 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@style/DefaultAnimation</item>
     </style>
+
+    <style name="dialogWindowAnim" parent="android:Animation">
+        <item name="android:windowEnterAnimation" >@anim/dialog_show_anim</item>
+        <item name="android:windowExitAnimation" >@anim/dialog_exit_anim</item>
+    </style>
+
 </resources>
