--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -31,8 +31,8 @@
 
                     <ImageButton
                         android:id="@+id/btn_back"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="10dp"
                         android:background="@null"
@@ -42,8 +42,8 @@
                         android:id="@+id/iv_avatar"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_marginTop="40dp"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="40dp" />
 
                     <TextView
                         android:id="@+id/tv_nick_name"
@@ -200,9 +200,9 @@
                 <com.whzl.mengbi.ui.widget.view.PrettyNumText
                     android:id="@+id/tv_pretty_num"
                     android:layout_width="wrap_content"
-                    android:layout_height="15dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
                     android:visibility="gone" />
 
                 <TextView
@@ -296,7 +296,7 @@
                 <com.whzl.mengbi.ui.widget.view.ExpValueLayout
                     android:id="@+id/evl_anchor_level"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -319,7 +319,7 @@
                 <com.whzl.mengbi.ui.widget.view.ExpValueLayout
                     android:id="@+id/evl_user_level"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -342,7 +342,7 @@
                 <com.whzl.mengbi.ui.widget.view.ExpValueLayout
                     android:id="@+id/evl_royal_level"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -359,13 +359,19 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_medal_wall"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:focusableInTouchMode="false"
-                android:nestedScrollingEnabled="false" />
+                android:layout_height="wrap_content"
+                android:descendantFocusability="blocksDescendants">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_medal_wall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:focusableInTouchMode="false"
+                    android:nestedScrollingEnabled="false" />
+            </RelativeLayout>
 
         </LinearLayout>
 
