--- a/app/src/main/res/layout/dialog_personal_info.xml
+++ b/app/src/main/res/layout/dialog_personal_info.xml
@@ -17,8 +17,8 @@
             android:id="@+id/iv_bg_personal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/bg_civilian"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -105,31 +105,31 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_nick_name" >
+                app:layout_constraintTop_toBottomOf="@id/tv_nick_name">
 
                 <TextView
                     android:id="@+id/tv_anchor_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_11"
                     android:layout_centerHorizontal="true"
+                    android:textColor="@color/font_color_11"
                     android:textSize="9sp" />
 
                 <com.whzl.mengbi.ui.widget.view.PrettyNumText
                     android:id="@+id/tv_pretty_num"
                     android:layout_width="wrap_content"
                     android:layout_height="15dp"
-                    android:layout_centerHorizontal="true"
                     android:layout_below="@id/tv_anchor_id"
-                    android:visibility="gone"/>
+                    android:layout_centerHorizontal="true"
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/ll_level_container"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:orientation="horizontal"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rl_number" />
@@ -138,11 +138,15 @@
                 android:id="@+id/tv_introduce"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="2"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:ellipsize="end"
                 android:gravity="center"
+                android:maxEms="20"
+                android:singleLine="true"
                 android:text="@string/no_motto_hint"
-                android:textSize="9sp"
                 android:textColor="@color/font_color_11"
+                android:textSize="9sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ll_level_container" />
@@ -163,17 +167,32 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="12sp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/tv_at"
+                <RelativeLayout
+                    android:id="@+id/rl_at"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/at"
-                    android:textColor="@color/font_color_11"
-                    android:textSize="12sp" />
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_at"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/at"
+                        android:textColor="@color/font_color_11"
+                        android:textSize="12sp" />
+
+                    <ImageView
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:src="@drawable/ic_at"
+                        android:layout_toLeftOf="@id/tv_at"
+                        android:layout_marginTop="4dp"/>
+
+                </RelativeLayout>
+
 
                 <TextView
                     android:id="@+id/tv_private_chat"
@@ -184,7 +203,7 @@
                     android:text="私信"
                     android:textColor="@color/font_color_11"
                     android:textSize="12sp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <RelativeLayout
                     android:id="@+id/rl_more"
