--- a/app/src/main/res/layout/layout_pretty_num.xml
+++ b/app/src/main/res/layout/layout_pretty_num.xml
@@ -8,7 +8,6 @@
         android:id="@+id/tv_pretty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
         android:text="靓"/>
@@ -19,7 +18,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:textSize="12sp"/>
+        android:paddingRight="2dp" />
 
 </LinearLayout>
