--- a/app/src/main/res/drawable/bg_btn_login_dialog.xml
+++ b/app/src/main/res/drawable/bg_btn_login_dialog.xml
@@ -5,6 +5,6 @@
     <corners android:radius="3dp" />
     <stroke
         android:width="1dp"
-        android:color="#90e6e6e6" />
+        android:color="#93f5fb" />
     <solid android:color="#ffffff"/>
 </shape>
