--- a/app/src/main/res/layout/item_follow_follow.xml
+++ b/app/src/main/res/layout/item_follow_follow.xml
@@ -27,7 +27,7 @@
             <ImageView
                 android:id="@+id/iv_level_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="13dp" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/tv_anchor_name"
