--- a/app/src/main/res/layout/item_load_more_end.xml
+++ b/app/src/main/res/layout/item_load_more_end.xml
@@ -13,6 +13,7 @@
         android:layout_marginRight="15dp"/>
 
     <TextView
+        android:id="@+id/tv_foot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
